# candidate-data-transformer

./: .gitignore  AI_DISCLOSURE.md  Makefile  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  routes.py  schemas.py
app/clients/: __init__.py  base.py  gemini.py
app/config/: settings.py
app/core/: __init__.py  exceptions.py  logging.py
app/domain/: __init__.py
app/normalizers/: __init__.py  base.py  email.py  name.py  normalization_service.py  phone.py
app/parsers/: __init__.py  ats_json_parser.py  base.py  candidate_mapper.py  column_rule.py  context.py  csv_parser.py  csv_reader.py  csv_record.py  metadata.py  pdf_parser.py  registry.py  result.py  txt_parser.py
config/: companya.json  companyb.json  companyc.json
docs/: 01_PROJECT_SPEC.md  02_ARCHITECTURE.md  03_IMPLEMENTATION_PLAN.md  04_AI_USAGE.md  05_CODING_GUIDELINES.md  06_DESIGN_DECISIONS.md  07_DEVELOPMENT_LOG.md  08_TECH_DEBT.md  AI_WORKFLOW.md  PROJECT_STATE.md  REVIEW_LOG.md  SENIOR_REVIEW.md
samples/: sample_candidate.csv  sample_candidate.json  sample_notes.txt
scripts/: demo_cli.py  run_nested_projection.py  run_pipeline.py
tests/: __init__.py  conftest.py  test_ats_json_parser.py  test_candidate_mapper.py  test_confidence_service.py  test_csv_parser.py  test_csv_reader.py  test_health.py  test_merge_engine.py  test_nested_projection.py  test_normalizers.py  test_pdf_parser.py  test_pipeline_e2e.py  test_projection_service.py  test_settings.py  test_templates.py  test_transform_endpoint.py  test_txt_parser.py  test_validation_service.py
(+34 files in other folders)
